[metadata]
name = manageiq-integration-tests
[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file:entry_points.txt

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
exclude = cfme.tests

[flake8]
# P663 is bad indentation
# https://gitlab.com/mkourim/polarion_docstrings/issues/1
# erroneous failures, ignore it for now
ignore = E128,E811,W503,W504,P663
max-line-length = 100
